kubernetes/kustomizations/misc/code-server-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: code-server
    namespace: apps
spec:
    forwardAuth:
        # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
        address: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/traefik
        trustForwardHeader: true
        maxBodySize: 1048576
        authResponseHeaders:
            - X-authentik-username
            - X-authentik-groups
            - X-authentik-entitlements
            - X-authentik-email
            - X-authentik-name
            - X-authentik-uid
            - X-authentik-jwt
            - X-authentik-meta-jwks
            - X-authentik-meta-outpost
            - X-authentik-meta-provider
            - X-authentik-meta-app
            - X-authentik-meta-version
