kubernetes/kustomizations/misc/code-server-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: codeserver-deny-egress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: code-server
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53

    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.100.0/24
              - 192.168.101.0/24
              - 192.168.1.0/24
              - 10.42.0.0/16
              - 10.43.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 7844
        - protocol: TCP
          port: 7844
